[fixes #17456071] better alignment of the tooltip bubble

--- a/app/stylesheets/partials/_coding_page.sass
+++ b/app/stylesheets/partials/_coding_page.sass
@@ -82,6 +82,8 @@ body #content #main .activity_tree a
   top: 7px
 
 .tooltip
+  display: inline-block
+  height: 15px
   &.info
     font-size: 10px
     text-decoration: none
