--- a/app/stylesheets/partials/_tables.sass
+++ b/app/stylesheets/partials/_tables.sass
@@ -485,6 +485,10 @@ tr.activity_subheading
       box-shadow: none
     &:first-child
       border-left: 1px solid $primary_border3
+      
+    .tooltip img
+      position: relative
+      top: 3px
 
   td
     background: #fff
